// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Video Disabled tracks (Android) 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 180,
      },
    ]
  }
  testID="video-container"
/>
`;

exports[`Storyshots Video Disabled tracks 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 180,
      },
    ]
  }
  testID="video-container"
/>
`;

exports[`Storyshots Video Fullscreen with testID 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      Object {},
      Object {
        "height": undefined,
      },
    ]
  }
  testID="1234-fullscreen-container"
/>
`;

exports[`Storyshots Video Fullscreen without testID 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      Object {},
      Object {
        "height": undefined,
      },
    ]
  }
  testID="video-fullscreen-container"
/>
`;

exports[`Storyshots Video Local preview 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 180,
      },
    ]
  }
  testID="video-container"
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
      ]
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/__fixtures__/assets/landscape-1.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
      testID="video-preview-container"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="video-preview-video"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={70}
          bbWidth={70}
          color="#FFFFFF"
          height={70}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              undefined,
              null,
              Object {
                "flex": 0,
                "height": 70,
                "width": 70,
              },
            ]
          }
          tintColor="#FFFFFF"
          vbHeight={24}
          vbWidth={24}
          width={70}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGPath
              d="M0 0h24v24H0z"
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
            <RNSVGPath
              d="M11.995 2.003c-5.514 0-10 4.486-10 10 0 5.513 4.486 10 10 10s10-4.487 10-10c0-5.514-4.486-10-10-10zm-3 15v-9l9 4.5-9 4.5z"
              fill={
                Array [
                  0,
                  4294967295,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Video Local video 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 180,
      },
    ]
  }
  testID="video-container"
/>
`;

exports[`Storyshots Video Remote preview 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 180,
      },
    ]
  }
  testID="video-container"
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://www.cerema.fr/sites/default/files/styles/uas_normal/public/media/images/2017/11/mountain-village-2657307_1920.jpg?h=d6fbcf4a&itok=JMWt0SsS",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
      testID="video-preview-container"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="video-preview-video"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={70}
          bbWidth={70}
          color="#FFFFFF"
          height={70}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              undefined,
              null,
              Object {
                "flex": 0,
                "height": 70,
                "width": 70,
              },
            ]
          }
          tintColor="#FFFFFF"
          vbHeight={24}
          vbWidth={24}
          width={70}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGPath
              d="M0 0h24v24H0z"
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
            <RNSVGPath
              d="M11.995 2.003c-5.514 0-10 4.486-10 10 0 5.513 4.486 10 10 10s10-4.487 10-10c0-5.514-4.486-10-10-10zm-3 15v-9l9 4.5-9 4.5z"
              fill={
                Array [
                  0,
                  4294967295,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Video Remote video 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 180,
      },
    ]
  }
  testID="video-container"
/>
`;

exports[`Storyshots Video Tracks (Android) 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 180,
      },
    ]
  }
  testID="video-container"
/>
`;

exports[`Storyshots Video Tracks 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 180,
      },
    ]
  }
  testID="video-container"
/>
`;
